- connect icc7 to the build after a repocopy from icc - update icc7 to 7.1.035 - sync parts of icc7 with the icc (v8) port

--- a/lang/Makefile
+++ b/lang/Makefile
@@ -90,6 +90,7 @@
     SUBDIR += huc
     SUBDIR += hugs
     SUBDIR += icc
+    SUBDIR += icc7
     SUBDIR += ici
     SUBDIR += icon
     SUBDIR += ifc
