Upgrade to 2.8.5 dev 17
PR:             61172

--- a/www/lynx-current/Makefile
+++ b/www/lynx-current/Makefile
@@ -6,11 +6,10 @@
 #
 
 PORTNAME=	lynx
-PORTVERSION=    2.8.5d16
-PORTREVISION=   3
+PORTVERSION=    2.8.5d17
 CATEGORIES=     www ipv6
 MASTER_SITES=	http://lynx.isc.org/current/
-DISTNAME=       ${PORTNAME}2.8.5dev.16
+DISTNAME=       ${PORTNAME}2.8.5dev.17
 
 MAINTAINER=	ache@FreeBSD.org
 COMMENT=	A non-graphical, text-based World-Wide Web client
@@ -22,9 +21,8 @@ USE_BZIP2=	yes
 NO_LATEST_LINK=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-screen=ncurses --with-zlib --libdir="${L_LIB}" \
-		--enable-nsl-fork --enable-nls --enable-prettysrc \
-		--enable-file-upload --enable-nested-tables \
-		--enable-source-cache --enable-read-eta \
+		--enable-nsl-fork --enable-nls --with-bzlib \
+		--enable-nested-tables \
 		--enable-scrollbar --enable-addrlist-page
 
 .ifndef NO_OPENSSL
