--- a/net/psi/Makefile
+++ b/net/psi/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	psi
 PORTVERSION=	0.9.1
+PORTREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME}
@@ -17,11 +18,9 @@ COMMENT=	A Qt-based Jabber client
 HAS_CONFIGURE=	yes
 USE_X_PREFIX=	yes
 USE_BZIP2=	yes
-USE_GMAKE=	yes
 USE_QT_VER=	3
-CONFIGURE_ENV=	QTDIR=${X11BASE} \
-		QMAKESPEC=${LOCALBASE}/share/qt/mkspecs/freebsd-g++
-CONFIGURE_ARGS=	--prefix=${PREFIX}
+CONFIGURE_ENV=	QMAKESPEC=${LOCALBASE}/share/qt/mkspecs/freebsd-g++
+CONFIGURE_ARGS=	--prefix=${PREFIX} --qtdir=${X11BASE} --disable-kde
 MAKE_ARGS+=	QTDIR=${X11BASE} \
 		QMAKESPEC=${LOCALBASE}/share/qt/mkspecs/freebsd-g++
 
