Add ace+tao-doc, a documentation for ACE+TAO.
PR:		ports/61167
Submitted by:	Sergey Matveychuk <sem@ciam.ru>

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -12,6 +12,7 @@
     SUBDIR += ac-archive
     SUBDIR += ace
     SUBDIR += ace+tao
+    SUBDIR += ace+tao-doc
     SUBDIR += acpicatools
     SUBDIR += activitymail
     SUBDIR += adabindx
