Add svrx 1.2, srvx IRC services.
srvx is a set of IRC services for ircu P10 protocol networks; it is developed
by a team of programmers affiliated with the GamesNET IRC Network. srvx is
designed to be a fast, extensible, scalable and reliable provider of NickServ,
ChanServ, HelpServ, OperServ, and Global services as well as advanced proxy
detection.

WWW:	http://www.srvx.net

PR:		59817
Submitted by:	Walter Venable <weaseal@hotmail.com>
Approved by:    erwin (mentor) (implicitly)

--- a/irc/Makefile
+++ b/irc/Makefile
@@ -71,6 +71,7 @@
     SUBDIR += sirc
     SUBDIR += sircd
     SUBDIR += slirc
+    SUBDIR += svrx
     SUBDIR += tirc
     SUBDIR += tircproxy
     SUBDIR += tkirc
