Add treewm, a window manager that tries to implement a new concept. In addition to the client windows the user can create desktops which can themselves contain windows and desktops. By arranging the windows in such a tree the user is able to manage his tasks efficiently.
See also: http://treewm.sourceforge.net/ and
http://www.informatik.uni-frankfurt.de/~polzer/treewmdurchnull/

PR:		ports/61189
Submitted by:	divZero <freebsd-dr@durchnull.de>

--- a/x11-wm/Makefile
+++ b/x11-wm/Makefile
@@ -84,6 +84,7 @@
     SUBDIR += sapphire-themes
     SUBDIR += sawfish2
     SUBDIR += swm
+    SUBDIR += treewm
     SUBDIR += tvtwm
     SUBDIR += ude
     SUBDIR += uwm
