--- a/net/icpld/Makefile
+++ b/net/icpld/Makefile
@@ -6,7 +6,7 @@
 #
 
 PORTNAME=	icpld
-PORTVERSION=	0.5.0
+PORTVERSION=	0.5.2
 CATEGORIES=	net
 MASTER_SITES=	http://www.ibiblio.org/icpld/download/
 
@@ -22,6 +22,14 @@ MAN1=		${PORTNAME}.1
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/src/${PORTNAME} ${PREFIX}/bin
 	${INSTALL_MAN} ${WRKSRC}/man/${PORTNAME}.1 ${MANPREFIX}/man/man1
+	${INSTALL_DATA} ${WRKSRC}/icpld.conf.sample ${PREFIX}/etc
+	@${ECHO_MSG} "#####################################################################"
+	@${ECHO_MSG} "Installing ${PREFIX}/etc/icpld.conf.sample file."
+	@${ECHO_MSG} "#####################################################################"
+	${INSTALL_SCRIPT} ${WRKSRC}/contrib/icpld.sh.sample ${PREFIX}/etc/rc.d
+	@${ECHO_MSG} "#####################################################################"
+	@${ECHO_MSG} "Installing ${PREFIX}/etc/rc.d/icpld.sh.sample"
+	@${ECHO_MSG} "#####################################################################"
 
 post-install:
 .if !defined(NOPORTDOCS)
