- Data transfere may be aborted now with the next message,   because the EINTR error isn't handled: "426 Data connection:   Interrupted system call".
PR:		61221
Submitted by:	maintainer

--- a/ftp/bsdftpd-ssl/Makefile
+++ b/ftp/bsdftpd-ssl/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	bsdftpd-ssl
 PORTVERSION=	1.0.0
+PORTREVISION=	1
 CATEGORIES=	ftp
 MASTER_SITES=	http://bsdftpd-ssl.sc.ru/files/bsdftpd-ssl/archive/1.0/src/
 DISTNAME=	bsdftpd-ssl-${PORTVERSION}
