Add libcaca 0.7, graphics library that outputs text instead of pixels.
PR:		61222
Submitted by:	Vincent Tantardini <vinc@FreeBSD-fr.org>
Approved by:    erwin (mentor) (implicitly)

--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -197,6 +197,7 @@
     SUBDIR += libart
     SUBDIR += libart_lgpl2
     SUBDIR += libaux
+    SUBDIR += libcaca
     SUBDIR += libdjvu++
     SUBDIR += libemf
     SUBDIR += libexif
