korean/ami: fix libintl dependency => avoid conflicts with other ports
	This port did not pick up the two libraries mentioned.

	One possitive side effect of getting the libintl dependency
	right, is that the port does not build its included version
	of the gettext library and does not install those two .alias
	that were conflicting with other ports (have a look at the
	pkg-plist diff and you'll see what I mean)

	http://freebsd.rambler.ru/bsdmail/freebsd-ports_2003/msg08919.html

PR:		ports/58440
Submitted by:	Simon Barner <barner@in.tum.de>
Approved by:	maintainer timeout

--- a/korean/ami/Makefile
+++ b/korean/ami/Makefile
@@ -17,6 +17,9 @@ EXTRACT_ONLY=	${DISTNAME}.tar.gz
 MAINTAINER=	cjh@FreeBSD.org
 COMMENT=	Well-known Korean X11 Input Method
 
+LIB_DEPENDS=	intl.5:${PORTSDIR}/devel/gettext \
+		iconv.3:${PORTSDIR}/converters/libiconv
+
 USE_X_PREFIX=	yes
 USE_GMAKE=	yes
 USE_GNOME=	gtk12 gdkpixbuf
@@ -25,7 +28,7 @@ GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-hangul-keyboard=2 --datadir=${PREFIX}/${DATADIR} \
 		--with-libiconv-prefix=${LOCALBASE} \
 		--with-gdk-pixbuf-prefix=${X11BASE} \
-		--without-included-gettext
+		--with-libintl-prefix=${LOCALBASE}
 DATADIR=	share
 
 .include <bsd.port.pre.mk>
