Reset maintainer from 3d@FreeBSD.org to ports@FreeBSD.org.  Apparently 3d@ has not been active in the FreeBSD community for some time now.
Reviewed by:	portmgr@FreeBSD.org (a month or so ago)

--- a/audio/ac3dec/Makefile
+++ b/audio/ac3dec/Makefile
@@ -10,7 +10,7 @@ PORTVERSION=	0.6.1
 CATEGORIES=	audio
 MASTER_SITES=	http://dara.notbsd.org/~aholtzma/ac3/tarballs/
 
-MAINTAINER=	3d@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Software for research in digital audio coding/decoding
 
 GNU_CONFIGURE=	yes
