--- a/x11-wm/fvwm/Makefile
+++ b/x11-wm/fvwm/Makefile
@@ -11,7 +11,7 @@ CATEGORIES=	x11-wm
 MASTER_SITES=	ftp://ftp.hpc.uh.edu/pub/fvwm/version-1/ \
 		ftp://ftp.ics.es.osaka-u.ac.jp/pub/CFAN/sources/1.x/
 
-MAINTAINER=	me@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	The fvwm window manager
 
 NO_LATEST_LINK=	yes
