--- a/x11/emu/Makefile
+++ b/x11/emu/Makefile
@@ -12,7 +12,7 @@ CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XCONTRIB}
 MASTER_SITE_SUBDIR=	applications
 
-MAINTAINER=	me@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	A terminal emulator for the X Window System
 
 USE_IMAKE=	yes
