Thomas-Martin Seck has agreed to take over any remaining maintainence duties of this port.  Note, however, from his email:
  As stated on ports@ already, I would like to retire it ASAP. I am
  currently trying to get all consumers of it to depend on www/squid.

So consider this as a heads-up that this port will be delted at
some time in the future.

--- a/www/squid24/Makefile
+++ b/www/squid24/Makefile
@@ -22,7 +22,7 @@ EXTRACT_SUFX=	-src.tar.gz
 PATCH_SITES=	http://www.squid-cache.org/Versions/v2/2.4/bugs/
 PATCHFILES=	
 
-MAINTAINER=	adrian@freebsd.org
+MAINTAINER=	tmseck@netcologne.de
 COMMENT=	The successful WWW proxy cache and accelerator
 
 DIST_SUBDIR=	squid2.4
