Update to 2004-01-11 snapshot of w3m 0.4.2. Make portlint happy.

--- a/japanese/w3m-img/Makefile
+++ b/japanese/w3m-img/Makefile
@@ -5,8 +5,10 @@
 # $FreeBSD$
 #
 
-PKGNAMESUFFIX=	-img
 CATEGORIES=	japanese
+PKGNAMESUFFIX=	-img
+
+MAINTAINER=	nobutaka@FreeBSD.org
 COMMENT=	A pager/text-based WWW browser with Japanese and inline image support
 
 MASTERDIR=	${.CURDIR}/../../www/w3m
