--- a/www/w3m-img/Makefile
+++ b/www/w3m-img/Makefile
@@ -6,6 +6,8 @@
 #
 
 PKGNAMESUFFIX=	-img
+
+MAINTAINER=	nobutaka@FreeBSD.org
 COMMENT=	A pager/text-based WWW browser with inline image support
 
 MASTERDIR=	${.CURDIR}/../../www/w3m
