--- a/www/w3m-m17n/Makefile
+++ b/www/w3m-m17n/Makefile
@@ -5,6 +5,9 @@
 # $FreeBSD$
 #
 
+PKGNAMESUFFIX=	-m17n
+
+MAINTAINER=	nobutaka@FreeBSD.org
 COMMENT=	A pager/text-based WWW browser with multilingualization support
 
 MASTERDIR=	${.CURDIR}/../w3m
