--- a/devel/cmake/Makefile
+++ b/devel/cmake/Makefile
@@ -6,14 +6,15 @@
 #
 
 PORTNAME=	cmake
-PORTVERSION=	1.6.7
+PORTVERSION=	1.8.3
 CATEGORIES=	devel
-MASTER_SITES=	http://www.cmake.org/files/v1.6/
+MASTER_SITES=	http://www.cmake.org/files/v${PORTVERSION:C/\.[[:digit:]]+$//}/
 
 MAINTAINER=	ports@FreeBSD.org
 COMMENT=	A cross-platform make
 
 GNU_CONFIGURE=	yes
+CONFIGURE_ARGS=	--docdir=${DOCSDIR:S|^${PREFIX}||} --datadir=${DATADIR:S|^${PREFIX}||}
 
 MAN1=	cmake.1
 
