Re-add srvx 1.2.1, srvx IRC services. [1]
Rename port 'svrx' to 'srvx'. [2]
So I remove svrx. There's only one update in history, so
I think I need to asj for a repocopy.

PR:		59817, 61218 (update), 61232 [2]
Submitted by:	Walter Venable <weaseal@hotmail.com> (maintainer)
Pointy hat to:  me
Approved by:    erwin (mentor)

--- a/irc/Makefile
+++ b/irc/Makefile
@@ -71,6 +71,7 @@
     SUBDIR += sirc
     SUBDIR += sircd
     SUBDIR += slirc
+    SUBDIR += srvx
     SUBDIR += tirc
     SUBDIR += tircproxy
     SUBDIR += tkirc
